--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         </h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             We will reply as soon as possible</p>
-                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:kamal@hakim.video" class="text-primary">Send us an
+                        <h5 class="link mbr-fonts-style display-7"><a href="mailto:admin@parfait.productions" class="text-primary">Send us an
                                 email</a>
                         </h5>
                     </div>
