--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             Mon - Sun 09:00am - 8:00pm</p>
                         <h5 class="link mbr-black mbr-fonts-style display-7">
-                            <a href="tel:+12345678910" class="text-primary">Call (480) 818-6</a>255</h5>
+                            <a href="tel:+12345678910" class="text-primary">Call (480) 818-6255</a></h5>
                     </div>
                 </div>
             </div>
