--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">12 Videos a Month</span><br></li><li class="list-group-item">4k video editing and exports</li><li class="list-group-item">Private Slack &amp; GoogleDrive</li><li class="list-group-item">Unlimited Revisions</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://calendly.com/parfaitproductions/consultation" class="btn btn-primary display-4" target="_blank">Get started</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://buy.stripe.com/fZecN29nD6EBgBqeUW" class="btn btn-primary display-4" target="_blank">Get started</a></div>
                     </div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                                 <li class="list-group-item">8 Videos a Month</li><li class="list-group-item">4k video editing and exports</li><li class="list-group-item">Private Slack &amp; GoogleDrive</li><li class="list-group-item">Unlimited Revisions</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://calendly.com/parfaitproductions/consultation" class="btn btn-primary display-4" target="_blank">Get started</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://buy.stripe.com/8wMbIYeHX5Ax1GwfYZ" class="btn btn-primary display-4" target="_blank">Get started</a></div>
                     </div>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                                 <li class="list-group-item">4 Videos a Month</li><li class="list-group-item">4k video editing and exports</li><li class="list-group-item">Private Slack &amp; GoogleDrive</li><li class="list-group-item">Unlimited Revisions</li>
                             </ul>
                         </div>
-                        <div class="mbr-section-btn text-center"><a href="https://calendly.com/parfaitproductions/consultation" class="btn btn-primary display-4" target="_blank">Get started</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://buy.stripe.com/3cscN26br2ol2KAcMM" class="btn btn-primary display-4" target="_blank">Get started</a></div>
                     </div>
                 </div>
             </div>
